test/loop/confidence/errors/comp_errors_4.loop
# Errors in pattern matching functions

func() ->
  x for x in [1, 2, 3] if

